--- a/sandbox/sandbox.old.html
+++ b/sandbox/sandbox.old.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Mr. pyTermTk Sandbox</title>
     <link rel="icon" type="image/x-icon" href="www/favicon.ico">
 
