--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -147,8 +147,8 @@
         fileUri  = urlParams.get("fileUri")
         filePath = urlParams.get("filePath")
         if (fileUri != null){
-          ttkProxy.loadFile(fileUri, "test_file.py");
-          loadFile("test_file.py")
+          ttkProxy.loadFile(fileUri, "/test_file.py");
+          loadFile("/test_file.py")
         }else if (filePath != null){
           loadFile(filePath)
         }else{
