Enable right mouse button support in the html exporter

--- a/tests/sandbox/sandbox.old.html
+++ b/tests/sandbox/sandbox.old.html
@@ -68,7 +68,7 @@
                               and <a href="https://w2ui.com/">w2ui</a>
                              </div>`},
                   { type: 'right', size: 1000, resizable: true, style: pstyle,
-                    html: '<div id="terminal" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px"></div>' }
+                    html: '<div id="terminal" oncontextmenu="return false;" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px"></div>' }
               ]
           });
           new w2field({ el: query('#fpsCap')[0], type: 'int', autoFormat: false })
