--- a/tests/sandbox/standalone.fullscreen.NerdFont.html
+++ b/tests/sandbox/standalone.fullscreen.NerdFont.html
@@ -32,7 +32,7 @@
   </head>
   <body>
 
-    <div id="terminal" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px"></div>
+    <div id="terminal" oncontextmenu="return false;" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px"></div>
 
     <script type="text/javascript">
       // Workaround from: https://developer.mozilla.org/en-US/docs/Web/API/CSS_Font_Loading_API
