--- a/tests/sandbox/standalone.html
+++ b/tests/sandbox/standalone.html
@@ -19,7 +19,7 @@
   </head>
   <body>
 
-    <div id="terminal" style="float: left"></div>
+    <div id="terminal" oncontextmenu="return false;" style="float: left"></div>
 
     <script type="text/javascript">
       /* https://www.npmjs.com/package/xterm-addon-unicode11 */
