--- a/tests/sandbox/standalone.fullscreen.html
+++ b/tests/sandbox/standalone.fullscreen.html
@@ -20,7 +20,7 @@
   </head>
   <body>
 
-    <div id="terminal" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px"></div>
+    <div id="terminal" oncontextmenu="return false;" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px"></div>
 
     <script type="text/javascript">
       /* xterm.js */
