--- a/_modules/index.html
+++ b/_modules/index.html
@@ -117,6 +117,7 @@
 <li><a href="TermTk/TTkCore/string.html">TermTk.TTkCore.string</a></li>
 <li><a href="TermTk/TTkCore/timer_unix.html">TermTk.TTkCore.timer_unix</a></li>
 <li><a href="TermTk/TTkCore/ttk.html">TermTk.TTkCore.ttk</a></li>
+<li><a href="TermTk/TTkGui/clipboard.html">TermTk.TTkGui.clipboard</a></li>
 <li><a href="TermTk/TTkGui/textdocument.html">TermTk.TTkGui.textdocument</a></li>
 <li><a href="TermTk/TTkLayouts/boxlayout.html">TermTk.TTkLayouts.boxlayout</a></li>
 <li><a href="TermTk/TTkLayouts/gridlayout.html">TermTk.TTkLayouts.gridlayout</a></li>
