--- a/autogen.TermTk/TermTk.TTkAbstract.html
+++ b/autogen.TermTk/TermTk.TTkAbstract.html
@@ -24,7 +24,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="TermTk.TTkAbstract.abstractitemmodel" href="TermTk.TTkAbstract.abstractitemmodel.html" />
-    <link rel="prev" title="Overlay Widgets (Windows)" href="../info/resources/modal.html" /> 
+    <link rel="prev" title="Drag and Drop" href="../info/resources/dragdrop.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -137,7 +137,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../info/resources/modal.html" class="btn btn-neutral float-left" title="Overlay Widgets (Windows)" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../info/resources/dragdrop.html" class="btn btn-neutral float-left" title="Drag and Drop" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="TermTk.TTkAbstract.abstractitemmodel.html" class="btn btn-neutral float-right" title="TermTk.TTkAbstract.abstractitemmodel" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
