--- a/genindex.html
+++ b/genindex.html
@@ -6997,6 +6997,8 @@
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.setText">(TTkCheckbox method)</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkGui.clipboard.html#TermTk.TTkGui.clipboard.TTkClipboard.setText">(TTkClipboard static method)</a>
+</li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkPickers.colorpicker.html#TermTk.TTkWidgets.TTkPickers.colorpicker.TTkColorButtonPicker.setText">(TTkColorButtonPicker method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkPickers.filepicker.html#TermTk.TTkWidgets.TTkPickers.filepicker.TTkFileButtonPicker.setText">(TTkFileButtonPicker method)</a>
@@ -8309,8 +8311,6 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.resizableframe.html#module-TermTk.TTkWidgets.resizableframe">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     TermTk.TTkWidgets.scrollarea
 
@@ -8318,6 +8318,8 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.scrollarea.html#module-TermTk.TTkWidgets.scrollarea">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     TermTk.TTkWidgets.scrollbar
 
@@ -8547,6 +8549,8 @@
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.text">(TTkCheckbox method)</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkGui.clipboard.html#TermTk.TTkGui.clipboard.TTkClipboard.text">(TTkClipboard static method)</a>
+</li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkPickers.colorpicker.html#TermTk.TTkWidgets.TTkPickers.colorpicker.TTkColorButtonPicker.text">(TTkColorButtonPicker method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkPickers.filepicker.html#TermTk.TTkWidgets.TTkPickers.filepicker.TTkFileButtonPicker.text">(TTkFileButtonPicker method)</a>
@@ -8735,6 +8739,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkCore.canvas.html#TermTk.TTkCore.canvas.TTkCanvas">TTkCanvas (class in TermTk.TTkCore.canvas)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox">TTkCheckbox (class in TermTk.TTkWidgets.checkbox)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkGui.clipboard.html#TermTk.TTkGui.clipboard.TTkClipboard">TTkClipboard (class in TermTk.TTkGui.clipboard)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#TermTk.TTkCore.color.TTkColor">TTkColor (class in TermTk.TTkCore.color)</a>
 </li>
