moved ttkDesigner inside the tools folder

--- a/tools/webExporter/index.html
+++ b/tools/webExporter/index.html
@@ -47,7 +47,7 @@
       document.fonts.ready.then(() => {fetchData()});
 
       function fetchData(){
-        fetch("package.json")
+        fetch("web.ttk.package.json")
         .then(response => response.json())
         .then(json => processAndStart(json));
       }
