--- a/sandbox/sandbox.NerdFont.html
+++ b/sandbox/sandbox.NerdFont.html
@@ -81,6 +81,7 @@
           });
           new w2field({ el: query('#fpsCap')[0], type: 'int', autoFormat: false })
     </script>
+    <input type="file" id="file-input" hidden />
 
     <script type="text/javascript">
       // Workaround from: https://developer.mozilla.org/en-US/docs/Web/API/CSS_Font_Loading_API
